fixed scrollbar issue, removed body scrollbar, changed homepage layout

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -21,7 +21,7 @@ body {
 }
 
 .footer {
-    position: fixed;
+    
     left: 0;
     bottom: 0;
     width: 100%;
@@ -114,15 +114,26 @@ textarea {
 .middleColGeneral {
     
     width: 60vw;
-    height: 100vh;
+    height:calc(100vh - 75px - 50px);
     overflow-y: scroll;
     
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .middleColGeneral::-webkit-scrollbar {
-    display: none;
+    width: 5px;
+    /*display: none;*/
 }
+
+.middleColGeneral::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+
+.middleColGeneral::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
+
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .middleColGeneral {
@@ -145,6 +156,7 @@ textarea {
 .toolBoxFriends {
 
     margin-top: 20px;
+    margin-bottom: 20px;
     margin-left: 40px;
     width: 500px;
     height: 350px;
